# personal_site

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  db.sqlite3  django-deployment.yaml  docker-compose.yml  makefile  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/worflows/: dev.yml
.github/workflows/: dev.yml
app/: urls.py
app/templates/: index.html
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py
blog/templates/: card.html
config/: settings.py  urls.py
detective/: admin.py  models.py  serializers.py  urls.py  views.py
detective/migrations/: 0001_initial.py
infra/kubernetes/: deployment.yaml  service.yaml
kubernetes/: deployment.yaml  service.yaml  volume.yaml
nginx/: nginx.conf
staticfiles/: staticfiles.json
templates/: article.html  article_detail.html  base.html  card.html  game_index.html  index.html  login.html  navbar.html
tests/: utils.py
users/: models.py  urls.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/registration/: login.html
